--- a/output/stellarteam.html
+++ b/output/stellarteam.html
@@ -25,40 +25,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Erin</h2>
+        <h2 class="card-title">Carl</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 12</li>
-            <li class="list-group-item">Email: <a href="mailto:Erin@umbrellacorp.com">Erin@umbrellacorp.com</a></li>
-            <li class="list-group-item">Office number: 2331</li>
+            <li class="list-group-item">ID: 7</li>
+            <li class="list-group-item">Email: <a href="mailto:Carl@ChickenWire.com">Carl@ChickenWire.com</a></li>
+            <li class="list-group-item">Office number: 301</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Aaron</h2>
+        <h2 class="card-title">Enrique</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 25</li>
-            <li class="list-group-item">Email: <a href="mailto:Aaron@umbrellacorp.com">Aaron@umbrellacorp.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/AaronandErin" target="_blank" rel="noopener noreferrer">AaronandErin</a></li>
+            <li class="list-group-item">ID: 27</li>
+            <li class="list-group-item">Email: <a href="mailto:Enrique@ChickenWire.com">Enrique@ChickenWire.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/ChickenWireEnrique" target="_blank" rel="noopener noreferrer">ChickenWireEnrique</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Eron</h2>
+        <h2 class="card-title">Pam</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 22</li>
+            <li class="list-group-item">Email: <a href="mailto:Pam@ChickenWire.com">Pam@ChickenWire.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/PamAKAKaren" target="_blank" rel="noopener noreferrer">PamAKAKaren</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Sally</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 34</li>
-            <li class="list-group-item">Email: <a href="mailto:Eron@universitytech.com">Eron@universitytech.com</a></li>
-            <li class="list-group-item">School: University Tech University</li>
+            <li class="list-group-item">ID: 54</li>
+            <li class="list-group-item">Email: <a href="mailto:Sally.ext@ChickenWire.com">Sally.ext@ChickenWire.com</a></li>
+            <li class="list-group-item">School: Sallyville Community College</li>
         </ul>
     </div>
 </div>
